# CourseWorkOne

./: .gitignore  CMakeLists.txt  GaussElimination.cpp  GaussElimination_test.cpp  Plot.py  README.md  main.cpp  main.hpp
MatrixLib/: Matrix.hpp  Point.hpp
Solution/Part1/: Gauss.cpp  Gauss.h  GaussElimination.cpp  GaussElimination.hpp  GaussSeidel.cpp  GaussSeidel.hpp  Solver.cpp  Solver.hpp  test.cpp
Solution/Part2/: cf_regression.cpp  cf_regression.h  cf_regression.hpp
Solution/Part3/: CubicSplineInterpolation.cpp  CubicSplineInterpolation.hpp  CubicSplineInterpolator.cpp  CubicSplineInterpolator.hpp  Helpers.hpp  Interpolator.cpp  Interpolator.hpp  NewtonInterpolation.cpp  NewtonInterpolation.hpp  NewtonInterpolator.cpp  NewtonInterpolator.hpp
datasets/part_3/: Cube_Coeff_1.csv  Cube_Coeff_2.csv  Cube_Pred_Points_1.csv  Cube_Pred_Points_2.csv  Cube_Test_Pred_Points_1.csv  Cube_Test_Pred_Points_2.csv  Newt_Coeff_1.csv  Newt_Coeff_2.csv  Newt_Pred_Points_1.csv  Newt_Pred_Points_2.csv  Newt_Test_Pred_Points_1.csv  Newt_Test_Pred_Points_2.csv
